--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         img {
           width: 100%;  
         }
+        body {
+            background: #333;
+        }
     </style>
   </head>
 
