--- a/cocktailmenu.html
+++ b/cocktailmenu.html
@@ -6,34 +6,26 @@
     <meta name="description" content="Retro Rager: NYE Edition by Jahin and Alan">
     <meta name="author" content="Jahin Aishee">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne">
-    <title>Retro Rager: NYE Edition</title>
+    <title>Cocktail Menu</title>
     <style>
         .css-selector {
         font-family: 'Syne';
         }
         #hero{
           margin-top: 100px;
-          width: 100%;  
         }
         img {
           width: 100%;  
         }
         body {
-            background: #333;
-        }
-        #hero a {
-          text-align: center;
-          color: #f6f6f6;
-          text-decoration: None;
-          font-size: 14px;
+            background: #D2D2D2;
         }
     </style>
   </head>
 
  <body>
     <section id = "hero">
-            <img src="./img/retro rager.jpg" alt="Retro Rager: NYE Edition. A New Year's Party by Jahin and Alan">
-            <a href="cocktailmenu.html">Cocktails</a>
+            <img src="./img/rager menu.jpg" alt="A cocktail menu for the party encased in film.">
      </section> 
 
  </body>
