--- a/index.html
+++ b/index.html
@@ -21,19 +21,12 @@
         body {
             background: #333;
         }
-        #hero a {
-          text-align: center;
-          color: #f6f6f6;
-          text-decoration: None;
-          font-size: 14px;
-        }
     </style>
   </head>
 
  <body>
-    <section id = "hero">
-            <img src="./img/retro rager.jpg" alt="Retro Rager: NYE Edition. A New Year's Party by Jahin and Alan">
-            <a href="cocktailmenu.html">Cocktails</a>
+    <section>
+      <a href="cocktailmenu.html"><img src="./img/retro rager.png" alt="Retro Rager: NYE Edition. A New Year's Party by Jahin and Alan"></a>
      </section> 
 
  </body>
