--- a/cocktailmenu.html
+++ b/cocktailmenu.html
@@ -11,9 +11,6 @@
         .css-selector {
         font-family: 'Syne';
         }
-        #hero{
-          margin-top: 100px;
-        }
         img {
           width: 100%;  
         }
@@ -24,8 +21,8 @@
   </head>
 
  <body>
-    <section id = "hero">
-            <img src="./img/rager menu.jpg" alt="A cocktail menu for the party encased in film.">
+    <section>
+            <img src="./img/rager menu.png" alt="A cocktail menu for the party encased in film.">
      </section> 
 
  </body>
